typescript/checker/tests/conformance/expressions/typeGuards/typeGuardNesting.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            4,
        ),
        hi: BytePos(
            13,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/typeGuards/typeGuardNesting.ts:1:5
  |
1 | let strOrBool: string|boolean;
  |     ^^^^^^^^^

